tests/behavior/success/while_break4.bz
function main() -> i32
{
	while (true)
	{
		while (true)
		{
			break;
			return 1;
		}
		return 0;
	}
	return 1;
}
