tests/behavior/error/optional_get_value5.bz
function get_optional() -> ?function() -> void
{
	return null;
}

function main()
{
	__builtin_optional_get_value(get_optional());
}
